--- a/less/images.less
+++ b/less/images.less
@@ -18,7 +18,7 @@ header {
 }
 
 .slideshow-container {
-  width: 100%;
+  width: 400px;
   .center();
   .fade {
     animation-name: fade;
@@ -53,7 +53,7 @@ header {
     width: 100%;
     max-width: 100%;
     border-radius: 15px;
-    
+
 
 
   }
